# Time-reversibility

./: .gitignore  README.md  pyproject.toml
data_generation/: bounded_random_walk.py  c_stochastic_dissipative_flows.py  c_stochastic_vanderpol.py  c_vanderpol_oscillator.py  continuous_data_generation.py  continuous_data_generator.py  continuous_time_series_generator.py  d_arma.py  d_quadratic.py  d_stochastic_sine_map.py  discrete_data_generation.py  zscore.py
data_generation/noise_generation/: noise_generator.m
src/: BF_PointOfCrossing.py  CO_RateOfChange.py  c_ornstein_uhlenbeck.py  d_deterministic_models.py  d_henon.py  d_logistic.py
src/analysis-hctsa/pre-processing/: preprocessing_hctsa.m
src/analysis-hctsa/run/: HCTSA_initscript.m  INP_mops.txt
src/data-generation/continuous-time/: continuous_data_generation.py  df_ts_cnt_generation.py
src/data-generation/discrete-time/: conservative_maps.py  discrete_data_generation.py  noises.py
src/data-hctsa/: INP_file_generation_cnt.py  INP_file_generation_dsct.py
src/main/python/: 0-full_dataframe_generation.py  00-dataframe_generation_cnt.py  00-dataframe_generation_dsct.py  1-zero_features.ipynb  2-1NN_classification.ipynb  3-feature_selection.ipynb  4-boxes.ipynb  4-inspect_good_features.ipynb  5-min_max.ipynb  5-plot_distributions.ipynb  6-boxes.ipynb  6-inspect_good_features.ipynb  7-MinMax.ipynb  7-min_max.ipynb  7-plot_distributions.ipynb  my_style.mplstyle
src/noise_generation/: pink_noise.asv
src/python/: 2-1NN_classification.ipynb  3-feature_selection.ipynb  7_MinMax.ipynb  my_style.mplstyle
(+37 files in other folders)
